--- a/client/templates/instagram.html
+++ b/client/templates/instagram.html
@@ -1,4 +1,5 @@
 ﻿<template name="Instagram">
+	<script src="https://assets.pagar.me/checkout/checkout.js"></script>
 	<div class="container">
 		<div class="row">
 			{{#if currentUser}}
