--- a/client/templates/instagram.html
+++ b/client/templates/instagram.html
@@ -68,10 +68,10 @@
 				<input type="submit" style="display: none;"/>
 			</form>
 			
-			{{#if resultados}}
+			{{#if qtdHashtag}}
 				<div class="col-sm-12">
 					<center>
-						Foram enconradas {{resultados.length}} fotos com a hashtag <i>{{hashtag}}</i>
+						Foram enconradas {{qtdHashtag}} fotos com a hashtag <i>{{hashtag}}</i>
 					</center>
 				</div>
 				<br/>
@@ -104,12 +104,15 @@
 				</div>
 								
 				<div class="col-sm-6" style="padding-top: 30px;">
-					<button class="btn btn-primary btn-icon-text waves-effect" style="width: 100%"><i class="zmdi zmdi-thumb-up zmdi-hc-fw"></i> Curtir fotos</button>
+					<button class="btn btn-primary btn-icon-text waves-effect" style="width: 100%"><i class="zmdi zmdi-thumb-up zmdi-hc-fw"></i> Curtir todas as fotos</button>
 				</div>
 				
 				
 				<div class="col-sm-6">
-					<button class="btn btn-primary btn-icon-text waves-effect" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Comentar</button>
+					<button class="btn btn-primary btn-icon-text waves-effect" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Comentar todas as fotos</button>
+				</div>
+				<div class="col-sm-12">
+					<button class="btn btn-primary btn-icon-text waves-effect" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Visualizar as fotos recentes da hashtag</button>
 				</div>
 				
 				{{#each resultados}}
