--- a/client/templates/instagram.html
+++ b/client/templates/instagram.html
@@ -115,24 +115,25 @@
 					<button class="btn btn-primary btn-icon-text waves-effect visualizar" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Visualizar as fotos recentes da hashtag</button>
 				</div>
 				
-				{{#if visualizarFotos}}
-					{{#each resultados}}
-						<div class="col-sm-4">
-							<div class="card small">
-							  <div class="card-image">
-								<img src="{{imagem}}">
-								<span class="card-title">{{hashtag}}</span>
-							  </div>
-							  <div class="card-content">
-								<p>{{descricao}}</p>
-							  </div>
-							  <div class="card-action">
-								<a href="#">Não curtir esta foto</a>
-								<a href="#">Não comentar esta foto</a>
-							  </div>
-							</div>
+				{{#each resultados}}
+					<div class="col-sm-4">
+						<div class="card small">
+						  <div class="card-image">
+							<img src="{{images.thumbnail.url}}">
+							<span class="card-title">{{hashtag}}</span>
 						  </div>
-					{{/each}}
+						  <div class="card-content">
+							<p>{{caption.text}}</p>
+						  </div>
+						  <div class="card-action">
+							<a href="#">Não curtir esta foto</a>
+							<a href="#">Não comentar esta foto</a>
+						  </div>
+						</div>
+					  </div>
+				{{/each}}
+				{{#if resultados}}
+					<button class="btn btn-primary btn-icon-text waves-effect visualizarMais" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Visualizar mais fotos recentes da hashtag</button>
 				{{/if}}
 				
 			{{/if}}
