--- a/client/templates/apresentacao.html
+++ b/client/templates/apresentacao.html
@@ -1,27 +1,59 @@
 ﻿<template name="Apresentacao">
-	<div class="card">
-		<div class="card-header">
-			<h2 class="animated fadeInDown">Para quem trabalha com <b>instagram</b> e precisa automatizar suas tarefas. <span class="logofont">trabalhogram</span> permite que você:</h2>
-		</div>
-		<div class="card-body card-padding">
-			
-				<ul>
-					<li>
-						Curtir todas as fotos com uma determinada hashtag automaticamente.
-					</li>
-					<li>
-						Comentar todas as fotos com uma determinada hashtag automaticamente.
-					</li>
-					<li>
-						Visualizar todas as fotos com uma determinada hashtag automaticamente.
-					</li>
-					<li>
-						Receber curtidas em todas as suas fotos ou em determinadas fotos (EM BREVE!)
-					</li>
-				</ul>
-			
-			<br/>
-			<a href="#features" class="btn bgm-teal waves-effect fadeInUp">Começe a usar</a> <a href="/saiba-mais" class="btn bgm-lightblue waves-effect fadeInUp">Saiba mais <i class="fa fa-arrow-down"></i></a>
-		</div>
+
+	<div id="home" class="capa">
+	  <div class="text-vcenter">
+	    <h1 class="animated fadeInDown">YouLike</h1>
+	    
+	  </div>
 	</div>
+
+	<div id="services" class="pad-section about">
+	  <div class="container">
+	  	<h3 class="text-center">Automatiza e facilita seu trabalho no instagram</h3>
+	    <h2 class="text-center">Nossos serviços</h2> <hr />
+	    <div class="row text-center">
+	      <div class="col-sm-3 col-xs-6">
+	        <i class="glyphicon glyphicon-cloud"> </i>
+	        <h4>Curtir Fotos</h4>
+	        <p>Curtir fotos com uma determinada hashtag automaticamente, sem a necessidade de entrar foto por foto e concluir seu trabalho.</p>
+	      </div>
+	      <div class="col-sm-3 col-xs-6">
+	        <i class="glyphicon glyphicon-leaf"> </i>
+	        <h4>Comentar Fotos</h4>
+	        <p>Escolha 4 comentários que deseja colocar nas fotos da hashtag e iremos fazer o trabalho pra você. Iremos intercalar os comentários em todas as fotos retornadas da hashtag.</p>
+	      </div>
+	      <div class="col-sm-3 col-xs-6">
+	        <i class="glyphicon glyphicon-phone-alt"> </i>
+	        <h4>Visualizar Fotos</h4>
+	        <p>Visualize todas as fotos da hashtag de forma fácil e rápida. Assim ficará muito mais fácil de saber se realmente está escolhendo a hashtag correta para seu negócio.</p>
+	      </div>
+	      <div class="col-sm-3 col-xs-6">
+	        <i class="glyphicon glyphicon-bullhorn"> </i>
+	        <h4>Receber curtidas</h4>
+	        <p>Receba curtidas na sua foto para promover seu instagram. <b>(EM BREVE!)</b> </p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div id="information" class="pad-section">
+	  <div style="background-color: white;">
+	  	<center>
+		  <b><p style="color: brown; font-size: 32px !important;">Pague somente pelo que precisa</p></b>
+		  </center>
+	  </div>
+	  <div class="p-t-150">
+		<div class="row">
+	      {{> Precos}}
+	    </div>		  
+	  </div>
+	</div>
+
+	<footer>
+	  <hr />
+	  <div class="container" style="color:white">
+	    <p class="text-right">Copyright &copy; YouLike 2016</p>
+	  </div>
+	</footer>
+
 </template>
