--- a/client/templates/instagram.html
+++ b/client/templates/instagram.html
@@ -77,28 +77,28 @@
 				<br/>
 				<div class="col-sm-6 col-md-3 form-group fg-float">
 					<div class="fg-line">
-						<input type="text" class="form-control fg-input">
+						<input type="text" class="form-control fg-input" id="comentario1">
 						<label class="fg-label">Comentário 1</label>
 					</div>
 				</div>
 				
 				<div class="col-sm-6 col-md-3 form-group fg-float">
 					<div class="fg-line">
-						<input type="text" class="form-control fg-input">
+						<input type="text" class="form-control fg-input" id="comentario2">
 						<label class="fg-label">Comentário 2</label>
 					</div>
 				</div>
 				
 				<div class="col-sm-6 col-md-3 form-group fg-float">
 					<div class="fg-line">
-						<input type="text" class="form-control fg-input">
+						<input type="text" class="form-control fg-input" id="comentario3">
 						<label class="fg-label">Comentário 3</label>
 					</div>
 				</div>
 				
 				<div class="col-sm-6 col-md-3 form-group fg-float">
 					<div class="fg-line">
-						<input type="text" class="form-control fg-input">
+						<input type="text" class="form-control fg-input" id="comentario4">
 						<label class="fg-label">Comentário 4</label>
 					</div>
 				</div>
