--- a/client/templates/precos.html
+++ b/client/templates/precos.html
@@ -1,10 +1,10 @@
 ﻿<template name="Precos">
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12 col-md-4" style="color: brown;">
+			<div class="col-xs-12 col-md-4" style="color: darkgreen;">
 				<div class="panel panel-success">
 					<div class="panel-heading">
-						<h3 class="panel-title">
+						<h3 class="panel-title" style="color: white;">
 							Bronze</h3>
 					</div>
 					<div class="panel-body">
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-4" style="color: silver;">
+			<div class="col-xs-12 col-md-4" style="color: darkblue;">
 				<div class="panel panel-primary">
 					<div class="cnrflash">
 						<div class="cnrflash-inner">
@@ -80,10 +80,10 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-12 col-md-4" style="color: gold;">
+			<div class="col-xs-12 col-md-4" style="color: darkgoldenrod;">
 				<div class="panel panel-warning">
 					<div class="panel-heading">
-						<h3 class="panel-title">
+						<h3 class="panel-title" style="color: white;">
 							Ouro</h3>
 					</div>
 					<div class="panel-body">
