--- a/client/templates/precos.html
+++ b/client/templates/precos.html
@@ -2,12 +2,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12 col-md-4" style="color: darkgreen;">
-				<div class="panel panel-success">
+				<div class="panel panelPreco panel-success">
 					<div class="panel-heading">
 						<h3 class="panel-title" style="color: white;">
 							Bronze</h3>
 					</div>
-					<div class="panel-body">
+					<div class="panel panelPreco-body">
 						<div class="the-price">
 							<h1>
 								R$ 20,00
@@ -38,7 +38,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-4" style="color: darkblue;">
-				<div class="panel panel-primary">
+				<div class="panel panelPreco panel-primary">
 					<div class="cnrflash">
 						<div class="cnrflash-inner">
 							<span class="cnrflash-label">MAIS
@@ -50,7 +50,7 @@
 						<h3 class="panel-title">
 							Prata</h3>
 					</div>
-					<div class="panel-body">
+					<div class="panel panelPreco-body">
 						<div class="the-price">
 							<h1>
 								R$ 50,00
@@ -81,12 +81,12 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-4" style="color: darkgoldenrod;">
-				<div class="panel panel-warning">
+				<div class="panel panelPreco panel-warning">
 					<div class="panel-heading">
 						<h3 class="panel-title" style="color: white;">
 							Ouro</h3>
 					</div>
-					<div class="panel-body">
+					<div class="panel panelPreco-body">
 						<div class="the-price">
 							<h1>
 								R$ 100,00
