--- a/client/templates/ajuda.html
+++ b/client/templates/ajuda.html
@@ -36,6 +36,9 @@
 		                        		<li style="color:black;">
 		                        			Qualquer conteúdo de foto curtida através de uma hashtag, é de responsabilidade do cliente que escolheu a hashtag. 
 		                        		</li>
+		                        		<li style="color:black;">
+		                        			Todo comentário escolhido é de total responsabilidade do cliente. 
+		                        		</li>
 
 		                        	</ol>
 		                            
@@ -52,7 +55,16 @@
 		                    </div>
 		                    <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
 		                        <div class="panel-body" style="color:black;">
-		                            Todo pagamento é processado e validado pelo <a href="https://pagar.me/">Pagar.Me</a>, a partir de ambiente e transações seguras. Os preços são referentes apenas ao pacote contratado, não possuindo carater acumulativo. Para saber mais clique <a href="/#precos">aqui</a>.
+		                        	<u>Pagamento</u>
+		                        	<p>
+		                            	Todo pagamento é processado e validado pelo <a href="https://pagar.me/">Pagar.Me</a>, a partir de ambiente e transações seguras.
+	                            	</p>
+
+	                            	<u>Preços</u>
+		                        	<p>
+		                            	Os preços são referentes apenas ao pacote contratado, não possuindo carater acumulativo. O valor informado na tabela de preços define o número máximo de curtidas e comentários que um pacote pode oferecer para cada hashtag. 
+		                            	Caso uma hashtag encontre menos resultados que o limite do pacote, a diferença não será acumulada.
+	                            	</p>
 		                        </div>
 		                    </div>
 		                </div>
