--- a/client/templates/apresentacao.html
+++ b/client/templates/apresentacao.html
@@ -1,5 +1,5 @@
 ﻿<template name="Apresentacao">
-
+	<script src="https://assets.pagar.me/checkout/checkout.js"></script>
 	<div id="home" class="capa">
 	  <div class="text-vcenter">
 	    <h1 class="animated fadeInDown">YouLike</h1>
@@ -13,22 +13,22 @@
 	    <h2 class="text-center">Nossos serviços</h2> <hr />
 	    <div class="row text-center">
 	      <div class="col-sm-3 col-xs-6">
-	        <i class="glyphicon glyphicon-cloud"> </i>
+	        <i class="glyphicon glyphicon-heart"> </i>
 	        <h4>Curtir Fotos</h4>
 	        <p>Curtir fotos com uma determinada hashtag automaticamente, sem a necessidade de entrar foto por foto e concluir seu trabalho.</p>
 	      </div>
 	      <div class="col-sm-3 col-xs-6">
-	        <i class="glyphicon glyphicon-leaf"> </i>
+	        <i class="glyphicon glyphicon-comment"> </i>
 	        <h4>Comentar Fotos</h4>
 	        <p>Escolha 4 comentários que deseja colocar nas fotos da hashtag e iremos fazer o trabalho pra você. Iremos intercalar os comentários em todas as fotos retornadas da hashtag.</p>
 	      </div>
 	      <div class="col-sm-3 col-xs-6">
-	        <i class="glyphicon glyphicon-phone-alt"> </i>
+	        <i class="glyphicon glyphicon-eye-open"> </i>
 	        <h4>Visualizar Fotos</h4>
 	        <p>Visualize todas as fotos da hashtag de forma fácil e rápida. Assim ficará muito mais fácil de saber se realmente está escolhendo a hashtag correta para seu negócio.</p>
 	      </div>
 	      <div class="col-sm-3 col-xs-6">
-	        <i class="glyphicon glyphicon-bullhorn"> </i>
+	        <i class="glyphicon glyphicon-thumbs-up"> </i>
 	        <h4>Receber curtidas</h4>
 	        <p>Receba curtidas na sua foto para promover seu instagram. <b>(EM BREVE!)</b> </p>
 	      </div>
