--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -1,4 +1,7 @@
 ﻿<template name="Principal">
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	</head>
 	<body>
 		<section class="{{#if isActivePath '/'}} home {{else}} {{#if isActivePath '/ajuda'}} fundoAjuda {{/if}} {{/if}}">
 			<div class="p-t-15">
