--- a/client/templates/precos.html
+++ b/client/templates/precos.html
@@ -12,7 +12,7 @@
 							<h1>
 								R$ 20,00
 							</h1>
-							<small>Você pode realizar todas as ações abaixo para 3 hashtags em um dia.</small>
+							<small>Você pode realizar todas as ações abaixo para até 1.440 fotos de uma hashtags. As hashtags podem ser escolhidas até 1 dia após o pagamento.</small>
 						</div>
 						<table class="table">
 							<tr>
@@ -33,7 +33,7 @@
 						</table>
 					</div>
 					<div class="panel-footer">
-						<a href="http://www.jquery2dotnet.com" class="btn btn-success" role="button">Começe a usar</a>
+						<a class="btn btn-success bronze" role="button">Começe a usar</a>
 					</div>
 				</div>
 			</div>
@@ -55,7 +55,7 @@
 							<h1>
 								R$ 50,00
 							</h1>
-							<small>Você pode realizar todas as ações abaixo para 5 hashtags em uma semana.</small>
+							<small>Você pode realizar todas as ações abaixo para até 10.080 fotos de três hashtags. As hashtags podem ser escolhidas até 1 semana após o pagamento.</small>
 						</div>
 						<table class="table">
 							<tr>
@@ -76,7 +76,7 @@
 						</table>
 					</div>
 					<div class="panel-footer">
-						<a href="http://www.jquery2dotnet.com" class="btn btn-success" role="button">Começe a usar</a>
+						<a class="btn btn-success prata" role="button">Começe a usar</a>
 					</div>
 				</div>
 			</div>
@@ -91,7 +91,7 @@
 							<h1>
 								R$ 100,00
 							</h1>
-							<small>Você pode realizar todas as ações abaixo para 10 hashtags em um mês.</small>
+							<small>Você pode realizar todas as ações abaixo para até 43.200 fotos de dez hashtags. As hashtags podem ser escolhidas até 1 mês após o pagamento.</small>
 						</div>
 						<table class="table">
 							<tr>
@@ -112,7 +112,7 @@
 						</table>
 					</div>
 					<div class="panel-footer">
-						<a href="http://www.jquery2dotnet.com" class="btn btn-success" role="button">Começe a usar</a> 
+						<a class="btn btn-success ouro" role="button">Começe a usar</a> 
 					</div>
 				</div>
 			</div>
