--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -10,10 +10,10 @@
             </li>
         </ul>
     </header>
-    <section id="main">
+    <section>
         <aside id="sidebar" class="sidebar c-overflow">
             <div class="profile-menu">
-                <a href="">
+                <a href="" class="profileMenu">
                     <div class="profile-pic">
                         <img src="{{foto}}" alt="">
                     </div>
