--- a/client/templates/instagram.html
+++ b/client/templates/instagram.html
@@ -7,136 +7,94 @@
 		{{/if}}
 </template>
 
-<template name="Pagar">
-	<div class="container">
-		<div class="row">
-			<h1 class="animated fadeInDown">No <span class="logofont">trabalhogram</span> você paga somente pelo que usa, veja nossos preços:</h1>
-			<div class="col-sm-4">
-				<div class="card">
-					<div class="card-header bgm-gray m-b-20">
-						<h2>Bronze <small>Todas as ações p/ 3 hashtags em um dia</small></h2>
-						<button class="btn bgm-blue btn-float waves-effect bronze"><i class="zmdi zmdi-card zmdi-hc-fw"></i></button>
-					</div>
-
-					<div class="card-body card-padding">
-						<span style="color: gray">Ao pagar por esta opção você poderá usar o sistema por um dia, realizando todas as ações para 3 hashtags diferentes.</span> 
-					</div>
-				</div>
-			</div>
-			
-			<div class="col-sm-4">
-				<div class="card">
-					<div class="card-header bgm-teal m-b-20">
-						<h2>Prata <small>Todas as ações p/ 5 hashtags em uma semana</small></h2>
-						<button class="btn bgm-blue btn-float waves-effect prata"><i class="zmdi zmdi-card zmdi-hc-fw"></i></button>
-					</div>
-
-					<div class="card-body card-padding">
-						<span style="color: teal">Ao pagar por esta opção você poderá usar o sistema por uma semana, realizando todas as ações para 5 hashtags diferentes.</span>
-					</div>
-				</div>
-			</div>
-			
-			<div class="col-sm-4">	
-				<div class="card">
-					<div class="card-header bgm-amber m-b-20">
-						<h2>Ouro <small>Todas as ações p/ 10 hashtags em um mês</small></h2>
-						<button class="btn bgm-blue btn-float waves-effect ouro"><i class="zmdi zmdi-card zmdi-hc-fw"></i></button>
-					</div>
-
-					<div class="card-body card-padding">
-						<span style="color: orange">Ao pagar por esta opção você poderá usar o sistema por um mês, realizando todas as ações para 10 hashtags diferentes.</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</template>
-
 <template name="Usar">
 	{{> Menu}}
 	<section id="content">
 		<div class="container">
-			<form class="hashtag">
-				<div class="form-group fg-float">
-					<div class="fg-line">
-						<input type="text" class="form-control fg-input" name="hashtag">
-						<label class="fg-label">Digite a hashtag e pressione Enter</label>
-						
-					</div>
-				</div>
-				<input type="submit" style="display: none;"/>
-			</form>
-			
-			{{#if qtdHashtag}}
-				<div class="col-sm-12">
-					<center>
-						Foram enconradas <b>{{qtdHashtag}}</b> fotos com a hashtag <i>#{{hashtag}}</i>
-					</center>
-				</div>
-				<br/>
-				<div class="col-sm-6 col-md-3 form-group fg-float">
-					<div class="fg-line">
-						<input type="text" class="form-control fg-input" id="comentario1">
-						<label class="fg-label">Comentário 1</label>
-					</div>
-				</div>
-				
-				<div class="col-sm-6 col-md-3 form-group fg-float">
-					<div class="fg-line">
-						<input type="text" class="form-control fg-input" id="comentario2">
-						<label class="fg-label">Comentário 2</label>
-					</div>
-				</div>
-				
-				<div class="col-sm-6 col-md-3 form-group fg-float">
-					<div class="fg-line">
-						<input type="text" class="form-control fg-input" id="comentario3">
-						<label class="fg-label">Comentário 3</label>
-					</div>
-				</div>
-				
-				<div class="col-sm-6 col-md-3 form-group fg-float">
-					<div class="fg-line">
-						<input type="text" class="form-control fg-input" id="comentario4">
-						<label class="fg-label">Comentário 4</label>
-					</div>
-				</div>
-								
-				<div class="col-sm-6" style="padding-top: 30px;">
-					<button class="btn btn-primary btn-icon-text waves-effect curtir" style="width: 100%"><i class="zmdi zmdi-thumb-up zmdi-hc-fw"></i> Curtir todas as fotos</button>
-				</div>
-				
-				
-				<div class="col-sm-6" style="padding-top: 30px;">
-					<button class="btn btn-primary btn-icon-text waves-effect comentar" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Comentar todas as fotos</button>
-				</div>
-				<div class="col-sm-12">
-					<button class="btn btn-primary btn-icon-text waves-effect visualizar" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Visualizar as fotos recentes da hashtag</button>
-				</div>
-				
-				{{#each resultados}}
-					<div class="col-sm-4">
-						<div class="card small">
-						  <div class="card-image">
-							<img src="{{images.thumbnail.url}}">
-							<span class="card-title">{{hashtag}}</span>
-						  </div>
-						  <div class="card-content">
-							<p>{{caption.text}}</p>
-						  </div>
-						  <div class="card-action">
-							<a href="#">Não curtir esta foto</a>
-							<a href="#">Não comentar esta foto</a>
-						  </div>
+            <div class="row">
+				<form class="hashtag">
+					<div class="form-group fg-float">
+						<div class="fg-line">
+							<input type="text" class="form-control fg-input" name="hashtag">
+							<label class="fg-label">Digite a hashtag e pressione Enter</label>
+							
 						</div>
-					  </div>
-				{{/each}}
-				{{#if resultados}}
-					<button class="btn btn-primary btn-icon-text waves-effect visualizarMais" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Visualizar mais fotos recentes da hashtag</button>
-				{{/if}}
+					</div>
+					<input type="submit" style="display: none;"/>
+				</form>
 				
-			{{/if}}
+				{{#if qtdHashtag}}
+					<div class="col-sm-12 p-t-25" style="color: black;">
+						<center>
+							Foram enconradas <b>{{qtdHashtag}}</b> fotos com a hashtag <u><i>#{{hashtag}}</i></u>
+						</center>
+					</div>
+					<br/>
+					<div class="col-sm-6 col-md-3 form-group fg-float p-t-25">
+						<div class="fg-line">
+							<input type="text" class="form-control fg-input" id="comentario1">
+							<label class="fg-label" style="color: black;">Comentário 1</label>
+						</div>
+					</div>
+					
+					<div class="col-sm-6 col-md-3 form-group fg-float p-t-25">
+						<div class="fg-line">
+							<input type="text" class="form-control fg-input" id="comentario2">
+							<label class="fg-label" style="color: black;">Comentário 2</label>
+						</div>
+					</div>
+					
+					<div class="col-sm-6 col-md-3 form-group fg-float p-t-25">
+						<div class="fg-line">
+							<input type="text" class="form-control fg-input" id="comentario3">
+							<label class="fg-label" style="color: black;">Comentário 3</label>
+						</div>
+					</div>
+					
+					<div class="col-sm-6 col-md-3 form-group fg-float p-t-25">
+						<div class="fg-line">
+							<input type="text" class="form-control fg-input" id="comentario4">
+							<label class="fg-label" style="color: black;">Comentário 4</label>
+						</div>
+					</div>
+									
+					<div class="col-sm-6" style="padding-top: 30px;">
+						<button class="btn btn-primary btn-icon-text waves-effect curtir" style="width: 100%"><i class="zmdi zmdi-thumb-up zmdi-hc-fw"></i> Curtir todas as fotos</button>
+					</div>
+					
+					
+					<div class="col-sm-6" style="padding-top: 30px;">
+						<button class="btn btn-primary btn-icon-text waves-effect comentar" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Comentar todas as fotos</button>
+					</div>
+					<div class="col-sm-12 p-t-25">
+						<button class="btn btn-primary btn-icon-text waves-effect visualizar" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Visualizar as fotos recentes da hashtag</button>
+					</div>
+					
+					{{#each resultados}}
+						<div class="col-sm-4">
+							<div class="cartao">
+					            <div class="cartao-imagem">
+					              <center>
+									<img src="{{images.low_resolution.url}}">					              	
+					              </center>
+					              <span class="cartao-title">{{hashtag}}</span>
+					            </div>
+					            <div class="cartao-content">
+					              <p>{{caption.text}}</p>
+					            </div>
+					            <div class="cartao-action">
+					              <a href="#">Não curtir esta foto</a>
+								  <a href="#">Não comentar esta foto</a>	
+					            </div>
+					        </div>
+						</div>
+					{{/each}}
+					{{#if resultados}}
+						<button class="btn btn-primary btn-icon-text waves-effect visualizarMais" style="width: 100%"><i class="zmdi zmdi-comment-text zmdi-hc-fw"></i> Visualizar mais fotos recentes da hashtag</button>
+					{{/if}}
+					
+				{{/if}}
+			</div>
 		</div>
 	</section>
 </template>
