--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -27,7 +27,10 @@
 
                 <ul class="main-menu">
                     <li>
-                        <a href=""><i class="zmdi zmdi-time-restore"></i> Logout</a>
+                        <a class="logout">
+                            <i class="zmdi zmdi-time-restore"></i> 
+                            Logout
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -35,6 +38,11 @@
             <ul class="main-menu">
                 <li>
                     <a href="/historico-pendencias"><i class="zmdi zmdi-time zmdi-hc-fw"></i> Histórico/Pendências</a>
+                </li>
+            </ul>
+            <ul class="main-menu">
+                <li>
+                    <a href="/comprar-pacote"><i class="zmdi zmdi-time zmdi-hc-fw"></i> Comprar pacote</a>
                 </li>
             </ul>
         </aside>
