--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -26,7 +26,7 @@
 						{{#if currentUser}}
 							<li><a href="/ajuda"><i class="fa fa-desktop linkMenu"></i>Ajuda</a></li>
 						{{else}}
-							<li><a><i class="fa fa-heart linkMenu efetuarLogin"></i>Login</a></li>
+							<li><a class="efetuarLogin"><i class="fa fa-heart linkMenu"></i>Login</a></li>
 							<li><a href="#services"><i class="fa fa-heart linkMenu"></i>Serviços</a></li>
 							<li><a href="#information"><i class="fa fa-flash linkMenu"></i>Preços</a></li>
 							<li><a href="/ajuda"><i class="fa fa-download linkMenu"></i>Termos e Condições</a></li>
