--- a/client/templates/comprarPacote.html
+++ b/client/templates/comprarPacote.html
@@ -1,6 +1,6 @@
 <template name="ComprarPacote">
 	{{> Menu}}
-	<section id="main">
+	<section id="main" class="animated fadeIn">
 		<div class="p-t-25">
 			{{> Precos}}			
 		</div>
