--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -5,16 +5,20 @@
 	<body>
 		<section class="{{#if isActivePath '/'}} home {{else}} {{#if isActivePath '/ajuda'}} fundoAjuda {{else}} {{#if isActivePath '/comprar-pacote'}} fundoAjuda {{else}} {{#if isActivePath '/instagram'}} fundoInstagram {{/if}} {{/if}} {{/if}} {{/if}}" id="{{#if isActivePath '/instagram'}}main{{/if}}">
 			{{#if isNotActivePath '/instagram'}}
-				<div class="p-t-15">
-					<div class="texture-overlay"></div>
-					<div class="container">
-						<div class="row nav-wrapper">
-							<div class="col-xs-offset-6 col-xs-6 text-right navicon">
-								<a id="trigger-overlay" class="nav_slide_button nav-toggle"><span></span></a>
+				{{#if isNotActivePath '/historico-pendencias'}}
+					{{#if isNotActivePath '/comprar-pacote'}}
+						<div class="p-t-15">
+							<div class="texture-overlay"></div>
+							<div class="container">
+								<div class="row nav-wrapper">
+									<div class="col-xs-offset-6 col-xs-6 text-right navicon">
+										<a id="trigger-overlay" class="nav_slide_button nav-toggle"><span></span></a>
+									</div>
+								</div>
 							</div>
 						</div>
-					</div>
-				</div>
+					{{/if}}
+				{{/if}}
 			{{/if}}
 		
 			
