--- a/client/templates/instagram.html
+++ b/client/templates/instagram.html
@@ -5,7 +5,7 @@
 
 <template name="Usar">
 	{{> Menu}}
-	<section id="content">
+	<section id="content" class="animated fadeIn">
 		<div class="container">
             <div class="row">
 				<form class="hashtag">
