--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -37,12 +37,23 @@
 
             <ul class="main-menu">
                 <li>
+                    <a href="/instagram"><i class="zmdi zmdi-home zmdi-hc-fw"></i> Home</a>
+                </li>
+            </ul>
+
+            <ul class="main-menu">
+                <li>
                     <a href="/historico-pendencias"><i class="zmdi zmdi-time zmdi-hc-fw"></i> Histórico/Pendências</a>
                 </li>
             </ul>
             <ul class="main-menu">
                 <li>
                     <a href="/comprar-pacote"><i class="zmdi zmdi-time zmdi-hc-fw"></i> Comprar pacote</a>
+                </li>
+            </ul>
+            <ul class="main-menu">
+                <li>
+                    <a href="/ajuda"><i class="zmdi zmdi-help-outline zmdi-hc-fw"></i> Ajuda</a>
                 </li>
             </ul>
         </aside>
