--- a/client/templates/apresentacao.html
+++ b/client/templates/apresentacao.html
@@ -2,7 +2,7 @@
 	<script src="https://assets.pagar.me/checkout/checkout.js"></script>
 	<div id="home" class="capa">
 	  <div class="text-vcenter">
-	    <h1 class="animated fadeInDown">YouLike</h1>
+	    <h1 class="animated fadeInDown c-white">YouLike</h1>
 	    
 	  </div>
 	</div>
