--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -46,11 +46,19 @@
                     <a href="/historico-pendencias"><i class="zmdi zmdi-time zmdi-hc-fw"></i> Histórico/Pendências</a>
                 </li>
             </ul>
+
             <ul class="main-menu">
                 <li>
-                    <a href="/comprar-pacote"><i class="zmdi zmdi-time zmdi-hc-fw"></i> Comprar pacote</a>
+                    <a href="/blacklist"><i class="zmdi zmdi-close-circle-o zmdi-hc-fw"></i> Blacklist</a>
                 </li>
             </ul>
+
+            <ul class="main-menu">
+                <li>
+                    <a href="/comprar-pacote"><i class="zmdi zmdi-card zmdi-hc-fw"></i> Comprar pacote</a>
+                </li>
+            </ul>
+            
             <ul class="main-menu">
                 <li>
                     <a href="/ajuda"><i class="zmdi zmdi-help-outline zmdi-hc-fw"></i> Ajuda</a>
